Adicinando arquivos de id e classe em html

--- a/html-css/aula003/id_e_classe.html
+++ b/html-css/aula003/id_e_classe.html
@@ -12,17 +12,19 @@
             border-radius: 5px;
         }
         #titulo {
-            color: red;
-            font-size: 24px;
+            color: rgb(250, 245, 245);
+            background-color: green;
+            padding: 10px;
+            border-radius: 5px;            
         }
     </style>
 </head>
 <body>
 
+    <h1 id="titulo">Este título tem um ID único</h1>
+
     <p class="destaque">Este é um parágrafo destacado com estilo de uma class.</p>
     <p class="destaque">Este também é destacado com estilo de uma mesma class.</p>
-
-    <h1 id="titulo">Este título tem um ID único</h1>
 
 </body>
 </html>
