--- a/html-css/aula010/form.html
+++ b/html-css/aula010/form.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aprendendo sobre formularios em html</title>
+    <style>
+      label{
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <form action="cadastro.php" method="get" target="_blank">
